Adding a variable to define the sudo package state. Default is `latest` which wont change the behavor of the role if un set.  This is needed because upgrading sudo can cause a kernel upgrade in ubuntu 16.04 and this may want to be controled by users of the role

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,3 +14,5 @@ sudoers_sudoers:
       entry: "{{ 'ALL=(ALL:ALL) ALL' if (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('12.04', '>=') or ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('7.0', '>=')) else 'ALL=(ALL) ALL' }}"
 
 sudoers_sudoers_d_files: {}
+
+sudoers_sudo_version: latest
