--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: install
   apt:
     name: sudo
-    state: latest
+    state: "{{ sudoers_sudo_version }}"
     update_cache: true
     cache_valid_time: "{{ apt_update_cache_valid_time | default(3600) }}"
   tags: [configuration, sudoers, sudoers-install]
@@ -16,7 +16,7 @@
     owner: root
     group: root
     mode: 0440
-  with_dict: sudoers_sudoers_d_files
+  with_dict: "{{ sudoers_sudoers_d_files }}"
   tags: [configuration, sudoers, sudoers-configuration, sudoers-configuration-sudoers-d]
 
 - name: update global configuration file
