--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,7 +16,7 @@
     owner: root
     group: root
     mode: 0440
-  with_dict: sudoers_sudoers_d_files
+  with_dict: "{{ sudoers_sudoers_d_files }}"
   tags: [configuration, sudoers, sudoers-configuration, sudoers-configuration-sudoers-d]
 
 - name: update global configuration file
