Adding a variable to define the sudo package state. Default is latest which wont change the behavor of the role if un set. This is needed because upgrading sudo does cause a kernel upgrade in ubuntu 16.04 and this may want to be controled by users of the role

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: install
   apt:
     name: sudo
-    state: "{{ sudoers_sudo_version }}"
+    state: "{{ sudoers_sudo_state }}"
     update_cache: true
     cache_valid_time: "{{ apt_update_cache_valid_time | default(3600) }}"
   tags: [configuration, sudoers, sudoers-install]
